--- a/css/styles.css
+++ b/css/styles.css
@@ -1,15 +1,20 @@
-ul, li {
-    list-style-type: none;
+ul,
+li {
+  list-style-type: none;
 }
 
 .clickable {
-    cursor: pointer;
+  cursor: pointer;
+}
+.clickable:hover {
+  background-color: blue;
+  color: yellow;
 }
 
 .deleteButton {
-    color: white;
-    font-weight: bold;
-    background-color: darkred;
-    margin-right: 10px;
-    border-radius: 50%;
+  color: white;
+  font-weight: bold;
+  background-color: darkred;
+  margin-right: 10px;
+  border-radius: 50%;
 }
